--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
         <meta charset="utf-8">
 		<title>webAudio introduction</title>
 		<style>
-			body { margin: 0; }
+		    body { margin: 5; }
 		</style>
+
+        <!-- <script type="module" src="./main.js"></script> -->
+        <script type="module" src="./recorder_app.js"></script>
     </head>
     <body>
-        
-        <script type="module" src="./main.js"></script>
-
+        <button id="play">Play</button>
+        <button id="record">Record</button>
+        <button id="stop">Stop</button>
+    
     </body>
 </html>
